--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -7,7 +7,11 @@
         <title>My first</title>
     </head>
     <body>
-        <p>Hello,world!</p>
-       <p>welcome to my first webpage!</p>
+        
+       
+       <h1>My First Webpage</h1>
+       <h2>Written with a little guidance from Moringa School</h2>
+       <p>Hello,world!</p>
+       <p>welcome to my first webpage</p>
     </body>
 </html>
