--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -13,5 +13,11 @@
        <h2>Written with a little guidance from Moringa School</h2>
        <p>Hello,world!</p>
        <p>welcome to my first webpage</p>
+       <p>Here are some thing I'm going to learn about coding:</p>
+       <ul>HTML</ul>
+       <li>CSS</li>
+       <li>javascript</li>
+       <li>And a lot more!</li>
+    </ul>
     </body>
 </html>
