--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -11,13 +11,19 @@
        
        <h1>My First Webpage</h1>
        <h2>Written with a little guidance from Moringa School</h2>
+       <h2>Written with a little guidance from <em>Moringa School</em></h2>
        <p>Hello,world!</p>
        <p>welcome to my first webpage</p>
        <p>Here are some thing I'm going to learn about coding:</p>
+       <P> welcome to my <strong>first web page</strong>!</p>
+        <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
+        <img src="elephant.jpg" alt="A photo of an elephant">
+        <img src="images/elephant.jpg" alt="A photo of an elephant">
        <ul>HTML</ul>
        <li>CSS</li>
        <li>javascript</li>
        <li>And a lot more!</li>
     </ul>
+    p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
     </body>
 </html>
